[package]
name = "leno23-installer"
version = "0.1.0"
edition = "2024"
description = "Install wyf027/leno23 resources into a target directory."
license = "MIT"

[[bin]]
name = "leno23-install"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.1"
indicatif = "0.18"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tar = "0.4"
